Bug 58963 - SLIDESHOW not full screen
Summary: SLIDESHOW not full screen
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: All macOS (All)
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-01-03 00:15 UTC by Jorendc
Modified: 2013-01-04 10:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of Impress Slide Show (73.80 KB, image/png)
2013-01-03 00:15 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jorendc 2013-01-03 00:15:07 UTC
Created attachment 72404 [details]
Screenshot of Impress Slide Show

Quite simular to "Bug 48708 - SLIDESHOW: don't show me full screen"; but because that is a bug report for the 3.5 branch, I'll open a new bug.

How to reproduce:
* start Impress
* press F5 or Slide Show > Slide Show

Current behavior: the slide show runs, but doesn't fill the screen (see attached screenshot)

Expected: the slide show will run in full screen

I set priority to CRITICAL because this is a very important and annoying bug;

Version: Libreoffice 4.1.0.0.alpha0+ (Build ID: 73731b01cd65defdf9b42a9754bede3ba84221d)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2013-01-02_08:47:51
Comment 1 Jorendc 2013-01-03 00:20:26 UTC
Comment on attachment 72404 [details]
Screenshot of Impress Slide Show

Fix mime tipe
Comment 2 Jorendc 2013-01-03 00:23:03 UTC
(I set importance to CRITICAL, not only because it's 'quite annoying', but also because it's a core feature of impress).

Because it worked in the previous versions -> regression.
I'll try to narrow the date it's entered down.
Comment 3 Jorendc 2013-01-03 00:53:45 UTC
Still CAN reproduce using: 
4.1.0.0.alpha0+ (Build ID: 00234d0578419c3d0847dd89554186146121f60) TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2013-01-01_08:03:47

CAN'T reproduce:
4.1.0.0.alpha0+ (Build ID: 413d1a932eb4c47510dd05905c1ff467cb186d0)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2012-12-19_04:13:37

CAN reproduce:
4.1.0.0.alpha0+ (Build ID: bb51791ae49ecded0f618b4534893adb8fcf917)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2012-12-22_01:05:08

CAN'T reproduce:
4.1.0.0.alpha0+ (Build ID: 40dc1210cbb785136e24150f06596cacf8e4ffe)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2012-12-21_00:15:27

CAN reproduce:
4.1.0.0.alpha0+ (Build ID: bb51791ae49ecded0f618b4534893adb8fcf917)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2012-12-22_01:05:08

So: bug entered between December 21 00:15:27 and December 22 01:05:08.
Can't narrow it down than this  (using the available downloads at http://dev-builds.libreoffice.org/daily/master/MacOSX-Intel@1-built_no-moz_on_10.6.8/)
Comment 4 Jorendc 2013-01-03 16:17:05 UTC
Set bug as Mac OSX only
Comment 5 Jorendc 2013-01-03 16:43:43 UTC
@Tor Lillqvist: because of http://cgit.freedesktop.org/libreoffice/core/commit/?id=b2e5a39babba902707dab28d81b843d1aef055dc I add you to CC.

I didn't saw your message while I submitted this bug.
Comment 6 Not Assigned 2013-01-03 20:01:07 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=15938c2480a0de8c3ce5bc7289cf3df2d73918ac

fdo#58963: Revert "fdo#39983: Support Mac OS X 10.7 full-screen mode"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Don't use this account, use tml@iki.fi 2013-01-03 20:01:40 UTC
Ah, drats. So let's revert that then.
Comment 8 Jorendc 2013-01-04 10:58:52 UTC
In current master it is indeed fixed: 4.1.0.0.alpha0+ (Build ID: 6a393297ce6d99bbc4edefbf01ab9c5c6f0eff8)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2013-01-04_01:05:31

Thanks!
-> VERIFIED FIXED