fdo#58963: Revert "fdo#39983: Support Mac OS X 10.7 full-screen mode"

It caused breakage of the existing slide-show full-screen mode. So
let's revert for now.